# markdown_board

./: README.md  pyproject.toml
a_board/: models.py  views.py
a_board/migrations/: 0001_initial.py  0002_image_check_for_upload_post_image_list.py  0003_comment.py
a_board/templates/a_board/: post_detail.html  post_form.html  post_list.html
config/: settings.py  urls.py
