[tool.poetry]
name = "django-htmx-imange-markdown"
version = "0.1.0"
description = ""
authors = ["bamjun <khy5116@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.7"
markdown = "^3.6"
pillow = "^10.4.0"
django-htmx = "^1.18.0"
django-cleanup = "^8.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
